HW06 - Optional refactor